adicionada root store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<router-outlet></router-outlet>
+
+<app-nav-bar></app-nav-bar>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
 <ngx-spinner size="medium" type="ball-clip-rotate" bdColor="rgba(51, 51, 51, 0.45)"></ngx-spinner>
-<ng2-toasty [position]="'top-right'"></ng2-toasty>
